tests/snapshots/integration_tests__snapshot_tests__array_split_09.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_split_09.vmt",
    status: Good,
    used_instantiations: [],
}
